...
            style="@style/TextTitle"
            android:text="@string/guide"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/info_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
...
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/card_radius"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:id="@+id/goto_about_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_textview"
                android:layout_width="wrap_content"
...
